@@ -4469,5 +4469,37 @@
       0
     ],
     "price": 0
+  },
+  {
+    "id": 170,
+    "atypeId": 1,
+    "description": "An upgraded scarf that provides immunity to \\it[8]\\c[0]\nand reduces the chance of being afflicted with \\it[89]\\c[0].",
+    "etypeId": 6,
+    "traits": [
+      {
+        "code": 14,
+        "dataId": 8,
+        "value": 1
+      },
+      {
+        "code": 13,
+        "dataId": 89,
+        "value": 0.5
+      }
+    ],
+    "iconIndex": 683,
+    "name": "Warm Scarf ★",
+    "note": "<Synthesis Ingredients>\nWarm Scarf\nFrozen Core: 2\nIce Cube: 50\nIce Essence: 10\n</Synthesis Ingredients>\n<Mask Name: Better Cold State Protection>\n<Synthesis SE: Equip3>",
+    "params": [
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0,
+      0
+    ],
+    "price": 1000
   }
 ]
