@@ -132,7 +132,7 @@ Additions:
    > [REDACTED HELMET]
    > [REDACTED TEAR]
    > [REDACTED WING]
- - Added 77 new equipment items:
+ - Added 78 new equipment items:
   ~ 13 weapons:
    > Shadowspec Sword
    > Shadowspec Warhammer
@@ -180,7 +180,7 @@ Additions:
    > Tellurian Knight's Bulwark
    > Vishnu's Aegis
    > Glacial Bulwark
-  ~ 20 accessories:
+  ~ 21 accessories:
    > Champion's Talisman
    > Soulstealer's Necklace
    > Vigilante's Charm
@@ -195,6 +195,7 @@ Additions:
    > Dragonforce Gauntlets
    > Condensed Icy Gel
    > Warm Scarf
+   > Warm Scarf ★
    > Snow Jacket
    > Snow Globe
    > Cloth Mask
